
2017-12-23  Franz Holzinger <franz@ttproducts.de>
    * new feature: use configurable maximumCharacters for a limit of the characters of the note field
    * improvement for the GatewayFactory singleton interface
    * do not use XHTML by default. The new marker ###XHTML_SLASH### can be replaced by the XHMTL end slash.

2017-11-08  Franz Holzinger <franz@ttproducts.de>
    * new feature: pass the transactor parameter request id for notification urls
    * move function getGatewayMode into the class GatewayBase
    * add new method transactionGetErrorDetails to store all errors in a variable inside of the gateway class
    * enhanced initialization method transactionInit to read in the methods.xml file and its attributes

2017-10-28  Franz Holzinger <franz@ttproducts.de>
    * use language object method getLL of LocalisationBase instead of tx_div2007_alpha5::getLL_fh003

2017-10-27  Franz Holzinger <franz@ttproducts.de>
    * rename namespace method usesBasket into useBasket
    * add new method transactionChangeValues to the GatewayBase for the change of a field in the current record of the transactor table
    * API modification: add the order number and the notification email
    * give extension informations in the details array transactionDetailsArray
    * bugfix for the usage of the gatewayid: This is the internal transaction id used by any external gateway

2017-10-07  Franz Holzinger <franz@ttproducts.de>
    * move all images, icons and logos from the res/ folder into Resources/Public/Icons/

2017-10-05  Franz Holzinger <franz@ttproducts.de>
    * change in the new API: no parameter for transactionGetForm. The configuration can be read in by "$conf = $this->getConf();" .
    * The name of the payment method does not need a transactor prefix.
    * Read in all possible errors into a string which is added to the end of the return error message.
    * new methods getSupportedGatewayArray and setSupportedGatewayArray
