@@ -21,9 +21,8 @@ namespace JambageCom\Transactor\Constants;
 class Message
 {
     const NOT_PROCESSED = '-';     // TX_TRANSACTOR_TRANSACTION_MESSAGE_NOT_PROCESSED
-    const WRONG_TRANSACTION = 'Received wrong transaction';     // WRONG_TRANSACTION_MSG
-    const WRONG_AMOUNT =      'Received wrong amount';     // WRONG_TRANSACTION_MSG
+    const WRONG_TRANSACTION = 'Received wrong transaction'; // WRONG_TRANSACTION_MSG
+    const WRONG_AMOUNT = 'Received wrong amount';
     const SUCCESS = 'OK';       // success
+    const ABORT = 'Abortion of transactor initialization';      // initialization failure due to timeout
 }
-
-
