@@ -22,6 +22,7 @@ class State
 {
     const IDLE = 0;                  // TX_TRANSACTOR_TRANSACTION_STATE_NO_PROCESS and
                                      // TX_TRANSACTOR_TRANSACTION_STATE_IDLE
+    const INIT_ABORT = 300;
     const INIT = 400;                // TX_TRANSACTOR_TRANSACTION_STATE_INIT
     const APPROVE_OK = 500;          // TX_TRANSACTOR_TRANSACTION_STATE_APPROVE_OK
     const APPROVE_DUPLICATE = 501;   // TX_TRANSACTOR_TRANSACTION_STATE_APPROVE_DUPLICATE
